<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.makuners.android.kickoff.MainActivity">
<LinearLayout
    android:id="@+id/scorePanels"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/teamAPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/team_a_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/team_a"
            android:textColor="#616161"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textSize="34sp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="goalTeamA"
            android:text="@string/add_goal_button" />
        <LinearLayout
            style="@style/MinorFieldsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/HeadersStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="6"
                android:text="@string/fouls"/>
        <TextView
            android:id="@+id/fouls_team_a"
            style="@style/HeadersStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="foulTeamA"
            android:text="@string/foul" />
        <LinearLayout
            style="@style/MinorFieldsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            style="@style/HeadersStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="6"
            android:text="@string/corners"/>
        <TextView
            android:id="@+id/corners_team_a"
            style="@style/HeadersStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="cornerTeamA"
            android:text="@string/corner_kick" />
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:id="@+id/teamBPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/team_b_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/team_b"
            android:textColor="#616161"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textSize="34sp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="goalTeamB"
            android:text="@string/add_goal_button" />
    <LinearLayout
        style="@style/MinorFieldsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/HeadersStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="6"
            android:text="@string/fouls"/>
        <TextView
            android:id="@+id/fouls_team_b"
            style="@style/HeadersStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"/>
    </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="foulTeamB"
            android:text="@string/foul" />
        <LinearLayout
            style="@style/MinorFieldsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            style="@style/HeadersStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="6"
            android:text="@string/corners"/>
        <TextView
            android:id="@+id/corners_team_b"
            style="@style/HeadersStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero"/>
    </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="cornerTeamB"
            android:text="@string/corner_kick" />
    </LinearLayout>
</LinearLayout>
<Button
    android:id="@+id/resetButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="32dp"
    android:onClick="resetScores"
    android:text="Reset" />
</RelativeLayout>